HOL-2x71/hol_modswitcher/module-scripts/roles/avi-challenge-88-ako/files/siteb-kuard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-ingress-host-path
spec:
  rules:
  - host: "kuard.region01b.vcf.sddc.lab"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuard
            port:
              number: 8080
